[package]
name = "pvss"
version = "0.1.1"
authors = ["Vincent Hanquez <vincent@typed.io>"]
description = "Publicly verifiable secret sharing implementations"
homepage = "https://github.com/vincenthz/rust-pvss"
repository = "https://github.com/vincenthz/rust-pvss"
license = "MIT"
keywords = [ "Crypto", "Cryptography", "Secret", "Sharing" ]
categories = [ "cryptography" ]
edition = "2018"

[lib]
name = "pvss"

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }

ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }

rand_core = { version = "0.5", default-features = false }
rand = "*" 

rust-crypto = "0.2.36"
