[package]
name = "pvss"
version = "0.1.2"
authors = ["zhtluo <zhtluo@gmail.com>"]
edition = "2018"

[lib]
name = "pvss"

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }

ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }

rand_core = { version = "0.5", default-features = false }
rand = "0.7" 

rust-crypto = "0.2.36"
