[package]
name = "pvss"
version = "0.1.2"
authors = ["zhtluo <zhtluo@gmail.com>"]
edition = "2018"

[lib]
name = "pvss"

[dependencies]
ark-serialize = { version = "0.2", default-features = false }
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-poly = { version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }

ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }

rand_core = { version = "0.5", default-features = false }
rand = "0.7" 

rust-crypto = "0.2.36"
